# tinytuya

./: .coveragerc  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  .travis.yml  AGENTS.md  API.md  ASYNC.md  DESIGN.md  DP_Mapping.md  LICENSE  PROTOCOL.md  README.md  RELEASE.md  SECURITY.md  codecov.yml  proposed_architecture.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test-devices.py  test.py  testcontrib.py  tests.py  wizard.py
.github/workflows/: contrib.yml  pylint.yml  ruff.yml  test.yml
docs/: Makefile  README.md  make.bat  rtd-requirements.txt
docs/sphinx/: cloud_api.rst  conf.py  contrib.rst  index.rst  local_api.rst  refrences.txt  start.rst  tt_gen_local_api.rst
docs/sphinx/_templates/: autoclass-fake-module-debug.rst  autoclass-fake-module.rst  autoclass-no-module.rst  automodule-tinytuya-core.rst  automodule-tinytuya.rst  full-autoclass.rst  local_api_gen.rst
docs/sphinx/start/: DPs.rst  account.rst  demo.rst  install.rst  link.rst  scan.rst  wizard.rst
examples/: Dockerfile  README.md  async_send_receive.py  bulb-music.py  bulb-scenes.py  bulb.py  cloud.py  cloud_ir.py  cloud_rgb_bulb.py  cloudrequest.py  devices.py  entrypoint.sh  getstatus.py  monitor.py  monitor_async.py  monitor_example.py  monitor_poll_example.py  multi-asyncio.py  multi-select.py  multi-threading.py  non_blocking_send_receive.py  nowait_send_receive.py  send_raw_dps.py  server.py  snapshot.py  star_projector.py  test_architecture.py  threading.py  zigbee_gateway.py
examples/Contrib/: DoorbellDevice-example.py  FloorFan-example.py  IRRemoteControlDevice-basic-learning-example.py  IRRemoteControlDevice-basic-sending-example.py  IRRemoteControlDevice-example.py  IRRemoteControlDevice-ircode-converting-example.py  PresenceDetectorDevice-example.py  RFRemoteControlDevice-example.py  SolarInverterDevice-example.py  SoriaInverterDevice-example.py  ThermostatDevice-example.py  TuyaSmartPlug-example.py  XmCosyStringLight-example.py
multiserver/: multiserver.py  socket-server.py  testws.html
regression/: README.md  extract_devices.py  isolated_comparison.py  local_tinytuya.py  regression_test.py  regression_utils.py  simple_async_test.py  test-async.py  test-async2.py  test.py
server/: Dockerfile  README.md  actions.json  devicelist.json  server.py  socket-server.py  tinytuya
server/mappings/: README.md  import.py  mappings.json
server/mqtt/: mqtt.json  mqtt_gateway.py
server/web/: device.html  device_dps.html  index.html  tinytuya.css
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  test_async_device_coverage.py  test_async_first_comprehensive.py  test_bulbdevice_wrapper.py  test_compat.py  test_core_device_coverage.py  test_cover_simple.py  test_cover_single.py  test_coverdevice_wrapper.py  test_device_async.py  test_edge_cases_integration.py
tinytuya/: BulbDevice.py  BulbDeviceAsync.py  Cloud.py  CoverDevice.py  CoverDeviceAsync.py  MappedDevice.py  OutletDevice.py  OutletDeviceAsync.py  ThermostatDevice.py  XenonDevice.py  __init__.py  __main__.py  cli.py  core.py  crypto_helper.py  exceptions.py  message_helper.py  scanner.py  scanner_async.py  udp_helper.py  ui.py  wizard.py  wizard2.py
tinytuya/BasicDevices/: BulbDevice.py  CoverDevice.py  OutletDevice.py  __init__.py
tinytuya/Contrib/: AtorchTemperatureControllerDevice.py  BlanketDevice.py  ClimateDevice.py  ColorfulX7Device.py  DoorbellDevice.py  FloorFanDevice.py  IRRemoteControlDevice.py  InverterHeatPumpDevice.py  PresenceDetectorDevice.py  README.md  RFRemoteControlDevice.py  SocketDevice.py  SoriaInverterDevice.py  ThermostatDevice.py  TowelRailHeaterDevice.py  WiFiDualMeterDevice.py  __init__.py
tinytuya/Contrib/examples/: ThermostatDevice-example.py
tinytuya/core/: AsyncWrapper.py  Device.py  DeviceAsync.py  Monitor.py  XenonDevice.py  XenonDeviceAsync.py  __init__.py  async_runner.py  command_types.py  const.py  core.py  crypto_helper.py  device_helper.py  document.py  error_helper.py  exceptions.py  header.py  message_helper.py  udp_helper.py
tinytuya/tuyacloud/: Cloud.py  __init__.py
tools/: README.md  broadcast-relay.py  fake-v35-device.py  pcap_parse.py  ttcorefunc.py
