[build-system]
requires = ["setuptools", "colorama", "requests", "cryptography"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
norecursedirs = ["regression", "sandbox", "server", "tools", "examples", ".git", "__pycache__"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning:unittest.mock",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:Enable tracemalloc to get traceback:RuntimeWarning",
    "ignore::RuntimeWarning:unittest.mock",
]

[tool.coverage.run]
source = ["tinytuya"]
omit = ["tests/*", "examples/*", "sandbox/*", "server/*", "tools/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
